# dbt-spanish-gas-prices

./: .dockerignore  .gitignore  Dockerfile  README.md  data_export.py  dbt_project.yml  pyproject.toml  requirements.txt  script.sh  sources_data_load.py
dbt/: dbt_project.yml  packages.yml  profiles.yml
dbt-gas-prices/: dbt_project.yml  sources_data_load.py
dbt-gas-prices/models/marts/core/: core.yml  dim_stations.sql
dbt/macros/: generate_date_range.sql  safe_cast_numeric.sql
dbt/models/marts/core/: prices.sql  prices__deduped.sql  stations.sql
dbt/models/marts/export/: prices__export.sql  stations__export.sql
dbt/models/staging/: _staging__models.yml  _staging__sources.yml  stg__gas_prices.sql  stg__municipalities.sql  stg__provinces.sql  stg__regions.sql  stg_gas_prices.sql  stg_municipalities.sql  stg_provinces.sql  stg_regions.sql
models/marts/core/: fct_prices.sql
models/staging/: src_raw.yml  stg_prices.sql  stg_stations.sql
sqlmesh/: config.yaml  external_models.yaml
sqlmesh/macros/: generate_surrogate_key.sql  safe_cast_numeric.sql
sqlmesh/models/: fct__gas_prices.sql  fct__stations.sql  stg__gas_prices.sql  stg__municipalities.sql  stg__provinces.sql  stg__regions.sql
table_schemas/: raw_gas_prices.json  raw_municipalities.json  raw_provinces.json
